--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/ilvv1314">View on GitHub</a>
 
-          <h1 id="project_title">∑(っ°Д°;)っ 备忘录.github.io</h1>
-          <h2 id="project_tagline">∑(っ°Д°;)っ 备忘录</h2>
+          <h1 id="project_title">∑(っ°Д°;)っ 备忘录.github.io  </h1>
+          <h2 id="project_tagline">会建立博客,却不会怎么去管理~</h2>
 
         </header>
     </div>
